# discord-rpc

./: CMakeLists.txt  discord-rpcConfig.cmake.in
